update: Beans CRUD
